syntax = "proto3";

service GreetService {
    
    rpc Greet(GreetRequest) returns (GreetResponse);

    // Exercise: I'll add this one here because I'm lazy
    rpc Sum(SumRequest) returns (SumResponse);

    // Server streaming RPC
    rpc GreetAlot(GreetRequest) returns(stream GreetResponse);

    // Exercise: 
    rpc PrimeNumberDecomposition (PMRequest) returns (stream PMResponse);

    // Client streaming - ideal for uploading bulk payload to server
    rpc LongGreet(stream GreetRequest) returns(GreetResponse);

    // Exercise :
    rpc ComputeAverage(stream NumberRequest) returns (AverageResponse);

    // BiDi streaming 
    rpc GreetEveryone(stream GreetRequest) returns (stream GreetResponse);

    // ------- ERROR sections -------------

    // Thow INVALID_ARGUMENT if arg is negative
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse);
}

// Greeting related RPCs
message Greeting {
    string firstName = 1;
    string secondName =2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string response = 1;
}

// Sum rpc - 
message SumRequest {
    int64 a = 1;
    int64 b = 2;
}

message SumResponse {
    int64 sum = 1;
}

// Prime number decomposition messages
message PMRequest {
    int64 number = 1;
}

message PMResponse {
    int64 prime_factor = 1;
}

// ComputeAverage -
message NumberRequest {
    int64 number = 1;
}

message AverageResponse {
    double average = 1;
}

// SquareRoot rpc
message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double square = 1;
}